--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Ll]og/
+[Ll]ogs/
+[Uu]ser[Ss]ettings
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -24,6 +27,7 @@ ExportedObj/
 *.pdb
 *.opendb
 *.VC.db
+*.log
 
 # Unity3D generated meta files
 *.pidb.meta
@@ -35,3 +39,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.log
